--- a/Blazor.CIMS/Pages/Index.razor
+++ b/Blazor.CIMS/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Mini Inventory System</h1>
 
-Welcome to your new app.
+Welcome to CIMS-Computer Management System
 
-<SurveyPrompt Title="How is Blazor working for you?" />
