--- a/Blazor.CIMS/_Imports.razor
+++ b/Blazor.CIMS/_Imports.razor
@@ -7,3 +7,9 @@
 @using Microsoft.JSInterop
 @using Blazor.CIMS
 @using Blazor.CIMS.Shared
+@using Blazor.CIMS.Data
+@using Blazor.CIMS.Helpers
+@using Blazor.CIMS.ViewModel
+@using FluentValidation;
+
+@inject NavigationManager NavigationManager
