--- a/Blazor.CIMS/Shared/NavMenu.razor
+++ b/Blazor.CIMS/Shared/NavMenu.razor
@@ -12,7 +12,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-       
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Computers" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Computers
+            </NavLink>
+        </li>
     </ul>
 </div>
 
