--- a/Blazor.CIMS/Shared/NavMenu.razor
+++ b/Blazor.CIMS/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Blazor.CIMS</a>
+    <a class="navbar-brand" href="">Mini Inventory System</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
