--- a/Blazor.CIMS/_Imports.razor
+++ b/Blazor.CIMS/_Imports.razor
@@ -7,9 +7,10 @@
 @using Microsoft.JSInterop
 @using Blazor.CIMS
 @using Blazor.CIMS.Shared
+@using Blazor.CIMS.Components
 @using Blazor.CIMS.Data
 @using Blazor.CIMS.Helpers
 @using Blazor.CIMS.ViewModel
-@using FluentValidation;
+@using static Blazor.CIMS.Common.Constants
 
 @inject NavigationManager NavigationManager
