--- a/Blazor.CIMS/Pages/Computers/ComputerCom.razor
+++ b/Blazor.CIMS/Pages/Computers/ComputerCom.razor
@@ -38,8 +38,8 @@
         </div>
 
         <div class="form-group">
-            <a class="btn btn-warning" href="EditBusiness/@Computer.Id">
-                Edit Business
+            <a class="btn btn-warning" href="EditComputer/@Computer.Id">
+                Edit
             </a>
         </div>
     </div>
