--- a/Blazor.CIMS/Shared/NavMenu.razor
+++ b/Blazor.CIMS/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Computers" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Computers
+                <span class="oi" aria-hidden="true"></span> Computers
             </NavLink>
         </li>
     </ul>
